feat: 프로모션 상품 정보만 있는 경우 처리 구현
프로모션이 아닌 일반 상품 재고도 소개합니다.
같은 상품 이름 기준으로 설명한 내용입니다.